src/pages/editor/styles.scss
@import "../../styles.scss";

@import url('https://fonts.googleapis.com/css?family=Inconsolata:300,400,500,700');

.editor-page {
  background-color: $background;
  height: 100%;

  margin: 0;
  .columns {
    margin: 0;
  }

  .column {
    padding: 0;
  }

  font-family: "Inconsolata", Monaco, monospace;
  font-weight: normal;
  font-size: small;
  color: $comment;
}

.editor-modal {
  .container {
    margin-top: 60px;
    background-color: $background;
    padding: 5px;
    width: 25%;
    box-shadow: 0 1px 2px black, 0 1px 5px black;
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  }

  input {
    margin: auto;
    display: block;
    width: 100%;
    height: 100%;
    background-color: $background;
    color: $comment;
    outline: 0.5px solid $comment;
    border: 0.5px solid black;
    border-radius: 0;
    color: lightgray;
  }

  input::placeholder {
    color: $comment;
  }
}

